fabric/testdata/out/ing_spp-product-identity-put-internal-product-identities-skus-service-stupsbeatbackendlegacystaging.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/backend-weights":"{\"spp-product-identity-master-572\":0.0,\"spp-product-identity-master-573\":100.0}","zalando.org/skipper-filter":"oauthTokeninfoAnyKV(\"realm\",
      \"/services\", \"realm\", \"/employees\") -\u003e unverifiedAuditLog(\"sub\")
      -\u003e oauthTokeninfoAllScope(\"uid\", \"spp-product-identity.identities.write\")
      -\u003e flowId(\"reuse\") -\u003e forwardToken(\"X-TokenInfo-Forward\", \"uid\",
      \"scope\", \"realm\")","zalando.org/skipper-predicate":"Weight(4) \u0026\u0026
      Path(\"/internal-product-identities/skus\") \u0026\u0026 Method(\"PUT\") \u0026\u0026
      JWTPayloadAllKV(\"sub\", \"stups_beat-backend-legacy-staging\") \u0026\u0026
      Header(\"X-Forwarded-Proto\", \"https\")"},"labels":{"controller-uid":"dd881b95-f979-11e8-968d-026f86c7c91a","deployment-id":"d-axm9b9h4emne2icuau68ss53s","pipeline-id":"l-gqkrnfckkaunnp4hd1ria2jz5"},"name":"spp-product-identity-put-internal-product-identities-skus-service-stupsbeatbackendlegacystaging","namespace":"default"},"spec":{"rules":[{"host":"spp-product-identity.smart-product-platform-test.zalan.do","http":{"paths":[{"backend":{"serviceName":"spp-product-identity-master-572","ser [...]
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/backend-weights: '{"spp-product-identity-master-572":0.0,"spp-product-identity-master-573":100.0}'
    zalando.org/skipper-filter: oauthTokeninfoAnyKV("realm", "/services", "realm",
      "/employees") -> unverifiedAuditLog("sub") -> oauthTokeninfoAllScope("uid",
      "spp-product-identity.identities.write") -> flowId("reuse") -> forwardToken("X-TokenInfo-Forward",
      "uid", "scope", "realm")
    zalando.org/skipper-predicate: Weight(4) && Path("/internal-product-identities/skus")
      && Method("PUT") && JWTPayloadAllKV("sub", "stups_beat-backend-legacy-staging")
      && Header("X-Forwarded-Proto", "https")
  creationTimestamp: "2021-02-11T09:29:28Z"
  generation: 145
  labels:
    controller-uid: dd881b95-f979-11e8-968d-026f86c7c91a
    deployment-id: d-axm9b9h4emne2icuau68ss53s
    pipeline-id: l-gqkrnfckkaunnp4hd1ria2jz5
  name: spp-product-identity-put-internal-product-identities-skus-service-stupsbeatbackendlegacystaging
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: spp-product-identity
    uid: dd881b95-f979-11e8-968d-026f86c7c91a
  resourceVersion: "1383881076"
  uid: f7bb628b-8012-41a0-a226-79729dda2f5d
spec:
  rules:
  - host: spp-product-identity.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: spp-product-identity-master-572
            port:
              number: 8080
        pathType: ImplementationSpecific
      - backend:
          service:
            name: spp-product-identity-master-573
            port:
              number: 8080
        pathType: ImplementationSpecific
  - host: spp-product-identity-api.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: spp-product-identity-master-572
            port:
              number: 8080
        pathType: ImplementationSpecific
      - backend:
          service:
            name: spp-product-identity-master-573
            port:
              number: 8080
        pathType: ImplementationSpecific
  - host: spp-identity-data-test.zalandoapis.com
    http:
      paths:
      - backend:
          service:
            name: spp-product-identity-master-572
            port:
              number: 8080
        pathType: ImplementationSpecific
      - backend:
          service:
            name: spp-product-identity-master-573
            port:
              number: 8080
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
